# KatDocExtract

./: .env.example  .gitignore  Dockerfile  README.md  app.py  compose.yml  config.py  deepseek_client.py  docker-compose.yml  document_io.py  files_api.py  files_signing.py  files_store.py  heuristics.py  models.py  parse_utils.py  pdf_engine.py  pipeline.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docker-publish.yml
static/: app.css  app.js
templates/: index.html  result.html
