[project]
name = "KatDocExtract"
version = "0.2.0"
description = "High-performance async OCR pipeline using DeepSeek-VL and PyMuPDF."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.48.0",
    "openai==2.37.0",     # Used for the async vLLM client
    "pymupdf==1.27.2.3",    # Replaces pdf2image/poppler
    "pillow==12.2.0",
    "python-multipart==0.0.29",
    "requests==2.34.2",
    "jinja2==3.1.6",
    "python-dotenv==1.2.2",
]
